--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [".devbox", "build/", "**/*.snap.tsx"]
+		"ignore": [".devbox", ".vscode", "build/", "**/*.snap.tsx"]
 	},
 	"formatter": {
 		"enabled": true,
